--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -25,7 +26,7 @@
     "node-fetch": "^2.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
