--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-test-renderer": "^16.10.2",
     "reactstrap": "^8.1.1"
   },
   "devDependencies": {
