--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "react": "^16.10.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.10.2",
     "react-test-renderer": "^16.10.2",
     "reactstrap": "^8.1.1"
