added random "relatives" for mug ad

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "server:dev": "nodemon ./server/server.js development",
     "start": "node ./server/server.js",
-    "create:db": "mysql -u root -p < ./server/db/schema.sql"
+    "create:db": "mysql -u root < ./server/db/schema.sql"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
