--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "create:db": "mysql -u root < ./server/db/schema.sql"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
@@ -28,7 +29,8 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.10.2",
     "react-test-renderer": "^16.10.2",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
@@ -37,6 +39,7 @@
     "airbnb-browser-shims": "^3.3.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-airbnb": "^4.1.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
