--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "webpack": "webpack -d --watch",
     "test": "jest",
     "server:dev": "nodemon ./server/server.js development",
-    "start": "node ./dist/index.js",
-    "generate:db": "node ./server/db/generate_seed_data.js",
-    "seed:db": "mysql -u root < ./server/db/seed_data.sql",
-    "reset:db": "mysql -u root < ./server/db/schema.sql"
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
